Ensure drag-able widget for blocks resize is visible.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,19 @@
     min-width: 570px;
     overflow: auto;
     resize: horizontal;
+    padding-right: 10px;
+}
+
+#blockly:after {
+    border-top: 0.5em solid transparent;
+    border-left: 0.5em solid transparent;
+    border-right: 0.5em solid #888;
+    border-bottom: 0.5em solid #888;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    content: '';
+    cursor: ew-resize;
 }
 
 /* Re-usable, generic rules */
